# my-django-project

./: .gitignore  AGENTS.md  README.md  db.sqlite3  main.py  pyproject.toml
apps/bookings/: models.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py
apps/bookings/templates/bookings/: booking_confirm.html  home.html  hotel_list.html  hotel_list_partial.html
config/: settings.py  urls.py
openspec/specs/: agentic-guidelines.md  project.md
