[project]
name = "my-django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "black>=26.5.1",
    "coverage>=7.14.1",
    "django>=5.2.15",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]
